--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-error-boundary": "^3.1.4",
     "typescript": "^4.9.3",
     "web-vitals": "^2.1.4"
   },
